gcc/testsuite/rust/rustc/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-if-else-3.rs
fn foo<'a>((x, y): (&'a i32, &i32)) -> &'a i32 {
    if x > y { x } else { y } // { dg-error ".E0621." "" { target *-*-* } }
}

fn main () { }

